# ilab-2

./: .gitignore  CMakeLists.txt  README.md  ilab 2.sln
GPU/: CMakeLists.txt  README.md
GPU/1-BitonicSort/: CMakeLists.txt  README.md  main.cpp
GPU/1-BitonicSort/tests/: 1.txt  1a.txt  2.txt  2a.txt  3a.txt
GPU/2-PatternMatching/: CMakeLists.txt  README.md  main.cpp  measure.cpp  scan_input.hpp
GPU/2-PatternMatching/filter_GPU/: PatternMatching.cpp  PatternMatching.hpp  kernel.cl
GPU/2-PatternMatching/native_cpu/: native_cpu.cpp  native_cpy.hpp
GPU/2-PatternMatching/tests/: 0.txt  2.txt  2a.txt  3.txt  3a.txt  4.txt  4a.txt  5.txt  6.txt  7.txt  gen.hpp
GPU/2-PatternMatching/tests_src/: CMakeLists.txt  gen.hpp  gen_test.cpp  gen_test.hpp  gtests.cpp
GPU/3-DirichletProblem/: CMakeLists.txt  README.md  main.cpp
GPU/3-DirichletProblem/native_CPU/: DPNativeCPU.hpp
Matrix/: CMakeLists.txt  CmakeLists.txt  Matrix.vcxproj  Matrix.vcxproj.filters  README.md  main.cpp
Matrix/1-determ/: CMakeLists.txt  main.cpp
Matrix/1-determ/tests/: 0002.txt  Matrix_test.cpp  test_main.cpp
Matrix/2-current/: ParserDriver.h  main.cpp  parser.l  parser.y  scanner.h
Matrix/2-current/tests/: test2.txt  test3.txt  test7a.txt  test8a.txt
Matrix/3-MatrixChain/: CMakeLists.txt  main.cpp
Matrix/3-MatrixChain/tests/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
Matrix/4.1-determ/: 4.1-determ.vcxproj  4.1-determ.vcxproj.filters  main.cpp
Matrix/4.1-determ/tests/: 0004.txt  0007.txt  0008.txt  1002.txt  Matrix_test.cpp  gen_test.cpp  gen_test.h
Matrix/4.2-current/: 4.2-current.vcxproj  4.2-current.vcxproj.filters  CMakeLists.txt  ParserDriver.h  main.cpp  parser.l  parser.y  test.txt
Matrix/4.2-current/tests/: gen_tests.cpp  main_test.cpp  test1.txt  test2a.txt  test3.txt  test3a.txt  test4.txt  test5a.txt  test7.txt  test8.txt  test8a.txt  test9a.txt
Matrix/Libs/Trace/: trace.h
Matrix/Libs/binary_tree/: binary_tree.h
Matrix/Libs/circuit/: Circuit.cpp  Circuit.h  Edge.h
Matrix/Libs/matrix/: IBuf.h  Matrix.h  Matrix.inl  MatrixBuff.h  MatrixBuffer.inl  Matrix_other.cpp
Matrix/Libs/other/: random.h  timer.h
Matrix/matrix/: IBuf.h  Matrix.cpp  Matrix.h  Matrix.inl  MatrixBuff.h  MatrixBuffer.inl  Matrix_other.cpp
Matrix/tests/: 0001.txt  0003.txt  0005.txt  0006.txt  1001.txt  1003.txt  Matrix_test.cpp  Matrix_test.h  bad0.txt  bad1.txt  bad10.txt  bad11.txt  bad12.txt  bad13.txt  bad14.txt  bad15.txt  bad16.txt  bad17.txt  bad18.txt  bad19.txt  bad2.txt  bad3.txt  bad4.txt  bad5.txt  bad6.txt  bad7.txt  bad8.txt  bad9.txt  gen_test.cpp  gen_test.h  test_main.cpp
OpenCL/: BitonicSort.cpp  BitonicSort.hpp  CMakeLists.txt  README.md  Wrapper.h  gen_test.h  kernel.cl  main.cpp
OpenCL/tests/: 0.txt  1.txt  1a.txt  3.txt
ParaC/: CMakeLists.txt  main.cpp
ParaC/Compiler/: BaseOperation.h  INode.h  Node.cpp  Node.h  ParaCL.cpp  ParaCL.h  VarTable.h
ParaC/parser/: driver.h  gramar.y  lex.l
ParaC/tests/: test1.txt
ParaCL/: CMakeLists.txt  README.md  main.cpp
ParaCL/Compiler/: DSTable.h  IInfo.h  INode.h  Node.cpp  Node.h  VarTable.h
ParaCL/parser/: driver.h  gramar.y  lex.l  scanner.h
ParaCL/tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
combinatorics/: CMakeLists.txt  README.md  gtests.cpp  main.cpp  test_gen.h
combinatorics/graph/: graph.h  graph.inl
combinatorics/tests/: 1.txt  2.txt  3.txt  4.txt  4a.txt  5.txt  5a.txt  6.txt  6a.txt
triangles/: CMakeLists.txt  README.md  main.cpp  mainDraw.cpp  other.cpp  triangles.vcxproj  triangles.vcxproj.filters
triangles/1-Intersec/: 2.1-Intersec.vcxproj.filters  CMakeLists.txt  README.md  main.cpp  other.cpp
triangles/1-Intersec/tests/: 001.txt  005.txt  010rr.txt  LAL_test.cpp
triangles/2.1-Intersec/: 2.1-Intersec.vcxproj  2.1-Intersec.vcxproj.filters  CMakeLists.txt  other.cpp
triangles/2.1-Intersec/tests/: 003.txt  LAL_test.cpp  bad3.txt  test_gen.h
triangles/2.2-VulkanApp/: 2.2-VulkanApp.vcxproj  2.2-VulkanApp.vcxproj.filters  CMakeLists.txt  app_main.cpp
triangles/2.2-VulkanApp/Application/: App.cpp  App.h  CameraView.h  VulkanDriver.cpp  VulkanDriver.h  WindowControl.cpp  WindowControl.h  vkCore.cpp  vkCore.h
triangles/3-VulkanApp/: CMakeLists.txt  README.md  app_main.cpp  gen_tests.hpp
triangles/3-VulkanApp/Application/: App.cpp  App.h  CameraView.h  Driver.cpp  Driver.h  Entity.cpp  Entity.hpp  vkCore.cpp  vkCore.h
triangles/3-VulkanApp/tests/: 2.txt  5.txt  6.txt
triangles/4-Meshes/: CMakeLists.txt  README.md  app_main.cpp  main_genScene.cpp
triangles/4-Meshes/Application/: App.cpp  App.h  CameraView.h  Driver.cpp  Driver.h  Entity.cpp  Entity.hpp  Mesh.cpp  Mesh.hpp  vkCore.cpp  vkCore.h
triangles/4-Meshes/Engine/: CameraView.h  Engine.cpp  Engine.hpp  Mesh.cpp  Mirror.cpp  PipelineBuilder.cpp  PipelineBuilder.hpp  vkCore.cpp  vkCore.h
triangles/4-Meshes/tests/: 00.xml  01.xml  02.xml  03.xml  3.txt  4.txt  7.txt  8.txt
triangles/5-shadows/: README.md
triangles/GLFWWrap/: GLFWWrap.cpp  GLFWWrap.hpp  Window.cpp  Window.hpp
triangles/LAL/: CMakeLists.txt  Line.cpp  LineSegment.cpp  Plane.cpp  Vector.cpp  config.h  square.cpp  triangle.cpp
triangles/LAL/include/: LAL.h  LALmath.h  Line.h  LineSegment.h  Plane.h  Vector.h  config.h  square.h  triangle.h
triangles/LAL/math/: LALmath.cpp
triangles/MyEngine/: CMakeLists.txt  README.md  app_main.cpp
triangles/MyEngine/Application/: App.cpp  App.h  Entity.cpp  Entity.hpp
triangles/MyEngine/Engine/: CameraView.h  DeleteonQueue.hpp  Engine.cpp  Engine.hpp  Mirror.cpp  PipelineBuilder.cpp  PipelineBuilder.hpp  Types.hpp  vkCore.cpp  vkCore.h
triangles/MyEngine/tests/: 00.xml  01.xml  02.xml
triangles/Octree/: Octree.cpp  Octree.h
triangles/VulakanApp/: VulakanApp.vcxproj  VulakanApp.vcxproj.filters
triangles/application/: app_main.cpp  helpa.h
triangles/application/Vulkan/: App.cpp  App.h  CameraView.h  WindowControl.h  vkCore.cpp  vkCore.h  vkShell.hpp
triangles/path/: tinyxml2p.hpp
triangles/tests/: 002.txt  004.txt  010rr.txt  LAL_test.cpp  LAL_test.h  test_gen.cpp  test_gen.h
(+84 files in other folders)
