#[[
/****************************************************************************************
*
*   CmakeLists.txt
*
*   Created by dmitry
*   16.03.2021
*
***/
]]

cmake_minimum_required(VERSION 3.10)


add_subdirectory(1-BitonicSort)

add_subdirectory(2-PatternMatching)

add_subdirectory(3-DirichletProblem)